--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -46,7 +46,7 @@ jobs:
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+          platforms: linux/amd64,linux/arm64
           cache-from: type=registry,ref=${{ vars.IMAGE_BASE }}:buildcache
           cache-to: type=registry,ref=${{ vars.IMAGE_BASE }}:buildcache,mode=max
           tags: |
